# Full_Stack_Data_Science_Masters

./: .gitignore  README.md
02_Flask/: Flask_Tutorial_Explaination.ipynb  app.py
04_Pandas/: 00_pandas_frequent_functions.ipynb  04_01_Group_By.ipynb
07_Statistics/: 01_Introduction_to_Statistics.ipynb
09_Statistics/: 01_Python_Code_for_Assest_Generation.ipynb  02_Statistics_Part_1.ipynb
13_Computer_Vision/: 01_Lenet.ipynb  03_VGG.ipynb  04_Inception.ipynb  05_Resnet.ipynb  LeNet_Architecture_A_Complete_Guide.ipynb
14_Natural_Language_Processing/: 01_Early_Days.ipynb  02_00_Word2Vec_Embeddings(2013).ipynb  02_02_Word2Vec_Implementation_Tensorflow.ipynb  04_FastText_Embeddings(2016).ipynb
15_pytorch/: 00_Pytorch_Syllabus.ipynb  01_Complete_Pytorch_Tensor_Tutorial.ipynb  02_Pytorch_Neural_Network_Example.ipynb  03_Pytorch_CNN_Example.ipynb  04_Pytroch_RNN_Example.ipynb  05_Pytorch_Bidirectional_LSTM_Example.ipynb  06_How_to_svae_and_load_model_in_pytorch.ipynb  07_Pytorch_Transfer_Learning_And_Fine_Tunning_Tutorial.ipynb  08_How_to_build_custome_Dataset_for_Image_in_Pytorch.ipynb
16_Tensorflow/: 00_Tensorflow_Syllabus.ipynb
17_MLOps/03_Python_dependency_management/POETRY/: pyproject.toml
Assignment/: 01st July Assignment.ipynb  02nd July Assignment.ipynb  19th August'23 SQL Assignment.ipynb  Assignment_no1.ipynb  Assignment_no10.ipynb  Assignment_no2.ipynb  Assignment_no3.ipynb  Assignment_no4.ipynb  Assignment_no5.ipynb  Assignment_no6.ipynb  Assignment_no7.ipynb  Assignment_no8.ipynb  Assignment_no9.ipynb  sql Assignment.ipynb
(+198 files in other folders)
